added -services and response classes cleaned response structures and error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port = 5000
+myapp.cat_api_url = https://catfact.ninja/fact
+myapp.dog_api_url = https://dog-facts-api.herokuapp.com/api/v1/resources/dogs?number=1
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
